# agent-baselines

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  dvc.yaml  pyproject.toml  setup.cfg
.beads/: issues.jsonl
.github/workflows/: ci-lint.yml  ci-test.yml
agent_baselines/: inspect_compat.py
agent_baselines/skills/: _internals.py  _provenance_checks.py  resolver.py
agent_baselines/solvers/: __init__.py  youcom.py
agent_baselines/solvers/asta/v0/: asta.py
agent_baselines/solvers/code_agent/: code_agent.py
agent_baselines/solvers/datavoyager/: agent.py
agent_baselines/solvers/datavoyager/dv_core/config/: datavoyager_magentic_one_config.yaml
agent_baselines/solvers/e2e_discovery/faker/: faker.py
agent_baselines/solvers/inspect_swe/: _filters.py  agent.py
agent_baselines/solvers/magenticone/: __init__.py  magentic_autogen_bridge.py  magentic_outer_loop.py
agent_baselines/solvers/react/: basic_agent.py  magentic_autogen_bridge.py  magentic_outer_loop.py  separate_agent_reflection.py
agent_baselines/solvers/smolagents/: agent.py
agent_baselines/solvers/sqa/: format_solver.py  formatted_fhouse.py  formatted_llm.py  formatted_perplexity.py  formatted_youcom.py  perplexity_base.py  sqa.py  sqa_subprocess.py
agent_baselines/solvers/sqa/debug/: cached_solver.py
agent_baselines/solvers/sqa/elicit/: memorized_solver.py
agent_baselines/solvers/sqa/general_memorized/: memorized_solver.py
agent_baselines/solvers/sqa/openscholar/: convert_cache_to_sqa.py
agent_baselines/solvers/sqa/scispace/: scispace.py
astabench/solvers/datavoyager/: agent.py
docker/: Dockerfile
docs/: inspect_ai_inventory.md  per_solver_envs.md
scripts/: arithmetic_solver.py  eval_then_score.sh  inspect_log_convert.sh  new_solver.sh  smoke_solve_score.sh  smoke_solvers.sh  solver_uv.sh
scripts/ci/: arithmetic_task.py  two_phase_smoke.yml
solvers/arxivdigestables/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/asta-v0/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/datavoyager/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/e2e_discovery/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/futurehouse/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/inspect-swe/: .gitignore  README.md  demo.sh  env  pyproject.toml  sandbox_compose.yaml  setup.sh
solvers/magenticone/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/paper_finder/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/react/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/scorer/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/smolagents/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/sqa/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/storm/: README.md  demo.sh  pyproject.toml  setup.sh
solvers/super/: README.md  demo.sh  pyproject.toml  setup.sh
tests/: _test_helpers.py  conftest.py  test_arithmetic_solver.py  test_basic_mockllm.py  test_eval_then_score.py  test_inspect_compat.py  test_inspect_log_convert.py  test_new_solver_scaffold.py  test_solver_subproject_hygiene.py  test_solver_uv.py
tests/skills/: test_resolver.py
tests/solvers/: test_inspect_swe_filters.py  test_inspect_swe_solver.py  test_paper_finder.py  test_sandbox_tools.py  test_sqa_env.py
