[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baselines-futurehouse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astabench==0.5.2",
    "inspect_ai==0.3.114",
    "futurehouse-client==0.3.19",
]

[tool.uv]
override-dependencies = [
    "litellm==1.82.3",
]
