[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baselines-react"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astabench==0.5.3",
]

[tool.uv.sources]
astabench = { git = "https://github.com/allenai/asta-bench", branch = "jason/upagenteval" }
