[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baselines-scorer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astabench==0.3.1",
    # Scorer tracks latest stable Inspect for broad log compatibility.
    "inspect_ai==0.3.179",
]

[tool.uv]
# Override needed because astabench==0.3.1 hard-pins inspect_ai==0.3.114.
override-dependencies = [
    "inspect_ai==0.3.179",
]
