[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baselines-sqa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astabench==0.3.1",
    "inspect_ai==0.3.114",
    "ai2-scholar-qa==0.7.0",
]

[tool.uv]
override-dependencies = [
    # Keep the SQA solver on the OpenAI SDK version required by
    # ai2-scholar-qa==0.7.0 in this older astabench==0.3.1 / inspect_ai==0.3.114
    # environment.
    "openai==1.78.0",
]
