[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baselines-sqa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astabench==0.5.2",
    "inspect_ai==0.3.114",
    "ai2-scholar-qa",
]

[tool.uv.sources]
ai2-scholar-qa = { git = "https://github.com/gituser768/ai2-scholarqa-lib.git", rev = "4b0ca06", subdirectory = "api" }
