[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-baselines-sqa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astabench==0.5.2",
    "inspect_ai==0.3.114",
    "ai2-scholar-qa==0.7.0",
]

[tool.uv]
override-dependencies = [
    "litellm==1.82.3",
    "openai==2.30.0",
]
